fixed default style for a tag on iOS

--- a/nam-to-ink/src/index.css
+++ b/nam-to-ink/src/index.css
@@ -30,6 +30,7 @@
 }
 
 .btn > * {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -39,6 +40,7 @@
 }
 
 .btn:hover > * {
+  color: inherit;
   text-decoration: none;
 }
 
